force-app/main/default/objects/ffr__RelatedContentPaneComponent__c/ffr__RelatedContentPaneComponent__c.object-meta.xml
<CustomObject>
    <description>Components are discrete pieces of functionality that may reside on a Related Content Pane.</description>
    <label>Related Content Pane Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Content Pane Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>