force-app/main/default/objects/ffr__RelatedContentPaneComponent__c/fields/ffr__ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ffr__ApexClass__c</fullName>
    <description>Defines the behaviour of the component instance</description>
    <label>Apex Class</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>