force-app/main/default/objects/ffr__RelatedContentPaneComponent__c/fields/ffr__Config__c.field-meta.xml
<CustomField>
    <fullName>ffr__Config__c</fullName>
    <label>Config</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>