force-app/main/default/objects/ffr__RelatedContentPaneComponent__c/fields/ffr__Height__c.field-meta.xml
<CustomField>
    <fullName>ffr__Height__c</fullName>
    <label>Height</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>