force-app/main/default/objects/ffr__RelatedContentPaneComponent__c/fields/ffr__Tab__c.field-meta.xml
<CustomField>
    <fullName>ffr__Tab__c</fullName>
    <label>Tab</label>
    <referenceTo>ffr__RelatedContentPaneTab__c</referenceTo>
    <relationshipName>RelatedContentPaneComponentInstances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>