force-app/main/default/objects/ffr__RelatedContentPaneComponent__c/fields/ffr__Width__c.field-meta.xml
<CustomField>
    <fullName>ffr__Width__c</fullName>
    <label>Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>